practice: less-middleware를 통한 less 스타일시트 css 컴파일, 화면 출력
pug 화면과 정적 디렉토리를 제공하고 less-middleware로 less 파일을 css
파일로 컴파일하여 화면을 출력한다

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,8 +1,9 @@
 html
     head
-        link(rel="stylesheet" href="/public/index.css")
+        link(rel="stylesheet" type="text/css" href="globals.css")
     body 
         h1 User profile page
         //- div=msg
         h2 Nickname
         div.green= nickname
+        include ./footer.pug
