--- a/src/views/group.pug
+++ b/src/views/group.pug
@@ -1,4 +1,13 @@
 html 
-    head 
+    head
+    link(rel="stylesheet" type="text/css" href="globals.css")
+    link(rel="stylesheet" type="text/css" href="group.css")
     body 
-        h1='Group is ' + group 
+        .container
+            .group-wrapper 
+                h1.group-title=group
+                span.group-description=description
+            div 
+                ul.song-list
+                    each n in songs 
+                        li.song=n
